# employee_tasks

./: .coveragerc  .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  run_bot.py
.github/workflows/: ci.yml
config/: settings.py  urls.py
employee_table/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
employee_table/migrations/: 0001_initial.py  0002_initial.py  0003_alter_employeetable_options_and_more.py
handlers/: employee_handlers.py  task_handlers.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_8ac76453d769d4fd___init___py.html  z_8ac76453d769d4fd_apps_py.html  z_8ac76453d769d4fd_models_py.html  z_8ac76453d769d4fd_tests_py.html  z_8ac76453d769d4fd_views_py.html  z_a594ddf6c66e42fa___init___py.html  z_a594ddf6c66e42fa_apps_py.html  z_a594ddf6c66e42fa_models_py.html  z_a594ddf6c66e42fa_serializers_py.html  z_a594ddf6c66e42fa_tests_py.html  z_a594ddf6c66e42fa_urls_py.html  z_a594ddf6c66e42fa_views_py.html  z_ada0b7622bb76289___init___py.html  z_ada0b7622bb76289_employee_handlers_py.html  z_ada0b7622bb76289_task_handlers_py.html  z_ae9aa36d6add2314___init___py.html  z_ae9aa36d6add2314_apps_py.html  z_ae9aa36d6add2314_models_py.html  z_ae9aa36d6add2314_serializers_py.html  z_ae9aa36d6add2314_tests_py.html  z_ae9aa36d6add2314_urls_py.html  z_ae9aa36d6add2314_views_py.html
nginx/: nginx.conf
task_table/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
task_table/migrations/: 0001_initial.py  0002_initial.py  (+2 more)
tests/: test_employee_handlers.py  test_task_handlers.py
user/: models.py
(+1 files in other folders)
